--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  font-family: 'Roboto', sans-serif;
+  margin: 0%;
+
+  .container {
+    width: 80%;
+    table {
+      width: 100%;
+    }
+  }
+}
